--- a/H1EmuLauncher/Language/StringResources.en-EN.xaml
+++ b/H1EmuLauncher/Language/StringResources.en-EN.xaml
@@ -46,7 +46,7 @@
     <system:String x:Key="item49">Some information may be missing.</system:String>
     <system:String x:Key="item50">Please make sure your emails are open for the 2-Auth code after logging into your Steam account.</system:String>
     <system:String x:Key="item51">Please select a folder where you would like to download the game to.</system:String>
-    <system:String x:Key="item52">You don't seem to have server files installed.\n\nInstall these in the Settings menu.</system:String>
+    <system:String x:Key="item52">You don't seem to have the server files installed.\n\nWould you like to install them now and continue? If so, choose either the Latest or Stable build.</system:String>
     <system:String x:Key="item53">Error launching server:</system:String>
     <system:String x:Key="item54">Downloading...</system:String>
     <system:String x:Key="item55">Using app branch: {0}</system:String>
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1.exe is currently being used.\n\nPlease close any open instances of H1Z1.\n\nYou can use the button below to kill all processes of H1Z1.</system:String>
     <system:String x:Key="item122">Current Game Version:</system:String>
     <system:String x:Key="item124">Launcher version</system:String>
-    <system:String x:Key="item125">Copyright © 2024 | H1Emu Project</system:String>
+    <system:String x:Key="item125">H1Emu © 2024</system:String>
     <system:String x:Key="item126">Lead Development</system:String>
     <system:String x:Key="item127">Developers</system:String>
     <system:String x:Key="item128">Administrators</system:String>
