--- a/H1EmuLauncher/Language/StringResources.es-ES.xaml
+++ b/H1EmuLauncher/Language/StringResources.es-ES.xaml
@@ -46,7 +46,7 @@
     <system:String x:Key="item49">Es posible que falte algo de información.</system:String>
     <system:String x:Key="item50">Por favor, asegúrate de que tu e-mail está disponible para el código de verificación en dos pasos después de iniciar sesión en tu cuenta de Steam.</system:String>
     <system:String x:Key="item51">Selecciona una carpeta donde te gustaría descargar el juego.</system:String>
-    <system:String x:Key="item52">Parece que no tienes los archivos de servidor instalados.\n\nInstálalos en el menú de Configuración.</system:String>
+    <system:String x:Key="item52">Parece que no tienes instalados los archivos del servidor.\n\n¿Quieres instalarlos ahora y continuar? Si es así, elija la versión más reciente o estable.</system:String>
     <system:String x:Key="item53">Error al iniciar el servidor:</system:String>
     <system:String x:Key="item54">Descargando...</system:String>
     <system:String x:Key="item55">Rama de aplicación:: {0}</system:String>
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1.exe está en ejecución.\n\nCierre todas las instancias abiertas de H1Z1.\n\nPuede usar el botón a continuación para eliminar todos los procesos de H1Z1.</system:String>
     <system:String x:Key="item122">Versión De Juego Actual:</system:String>
     <system:String x:Key="item124">Versión del launcher</system:String>
-    <system:String x:Key="item125">Copyright © 2024 | H1Emu Project</system:String>
+    <system:String x:Key="item125">H1Emu © 2024</system:String>
     <system:String x:Key="item126">Desarrolladores líder</system:String>
     <system:String x:Key="item127">Desarrolladores</system:String>
     <system:String x:Key="item128">Administradores</system:String>
