--- a/H1EmuLauncher/Language/StringResources.fr-FR.xaml
+++ b/H1EmuLauncher/Language/StringResources.fr-FR.xaml
@@ -46,7 +46,7 @@
     <system:String x:Key="item49">Certaines informations peuvent être manquantes.</system:String>
     <system:String x:Key="item50">Veuillez vous assurer que vos emails sont ouverts pour le code 2-Auth après vous être connecté à votre compte Steam.</system:String>
     <system:String x:Key="item51">Veuillez sélectionner un dossier dans lequel vous souhaitez télécharger le jeu.</system:String>
-    <system:String x:Key="item52">Vous ne semblez pas avoir installé les fichiers du serveur.\n\nInstallez-les dans le menu Paramètres.</system:String>
+    <system:String x:Key="item52">Vous ne semblez pas avoir installé les fichiers du serveur.\n\nVoulez-vous les installer maintenant et continuer ? Si tel est le cas, choisissez la version la plus récente ou la plus stable.</system:String>
     <system:String x:Key="item53">Erreur de lancement du serveur:</system:String>
     <system:String x:Key="item54">Téléchargement en cours...</system:String>
     <system:String x:Key="item55">Utilisation d'une branche d'application: {0}</system:String>
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1.exe est actuellement en cours d'utilisation.\n\nVeuillez fermer toutes les instances ouvertes de H1Z1.\n\nVous pouvez utiliser le bouton ci-dessous pour tuer tous les processus de H1Z1.</system:String>
     <system:String x:Key="item122">Version actuelle du jeu:</system:String>
     <system:String x:Key="item124">Version du launcher</system:String>
-    <system:String x:Key="item125">Copyright © 2024 | H1Emu Project</system:String>
+    <system:String x:Key="item125">H1Emu © 2024</system:String>
     <system:String x:Key="item126">Développement de Prospects</system:String>
     <system:String x:Key="item127">Développeurs</system:String>
     <system:String x:Key="item128">Administrateurs</system:String>
