--- a/H1EmuLauncher/Language/StringResources.hr-HR.xaml
+++ b/H1EmuLauncher/Language/StringResources.hr-HR.xaml
@@ -46,7 +46,7 @@
     <system:String x:Key="item49">Neke informacije možda nedostaju.</system:String>
     <system:String x:Key="item50">Nakon prijave Steam računom, provjerite da vaš e-mail ima mogućnost primanja 2-Auth koda.</system:String>
     <system:String x:Key="item51">Odaberite mapu u koju želite preuzeti igru.</system:String>
-    <system:String x:Key="item52">Nemate instalirane datoteke servera.\n\nInstalirajte ih odlaskom u Postavke.</system:String>
+    <system:String x:Key="item52">Čini se da nemate instalirane datoteke poslužitelja.\n\nŽelite li ih sada instalirati i nastaviti? Ako je tako, odaberite najnoviju ili stabilnu verziju.</system:String>
     <system:String x:Key="item53">Pogreška pri pokretanju servera:</system:String>
     <system:String x:Key="item54">Preuzimanje...</system:String>
     <system:String x:Key="item55">Korištenjem grane aplikacije: {0}</system:String>
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1.exe je trenutno u korištenju.\n\nZatvorite sve otvorene instance H1Z1.\n\nMožete upotrijebiti gumb ispod da prekinete sve procese H1Z1.</system:String>
     <system:String x:Key="item122">Trenutna verzija igre:</system:String>
     <system:String x:Key="item124">Verzija launchera</system:String>
-    <system:String x:Key="item125">Copyright © 2024 | H1Emu Project</system:String>
+    <system:String x:Key="item125">H1Emu © 2024</system:String>
     <system:String x:Key="item126">Vodeći developer</system:String>
     <system:String x:Key="item127">Programeri</system:String>
     <system:String x:Key="item128">Administratori</system:String>
