--- a/H1EmuLauncher/Language/StringResources.pt-PT.xaml
+++ b/H1EmuLauncher/Language/StringResources.pt-PT.xaml
@@ -46,7 +46,7 @@
     <system:String x:Key="item49">Algumas informações podem estar faltando.</system:String>
     <system:String x:Key="item50">Por favor, certifique-se de inserir o código de autenticação após iniciar a sua conta Steam.</system:String>
     <system:String x:Key="item51">Selecione uma pasta para onde deseja baixar o jogo.</system:String>
-    <system:String x:Key="item52">Não tem os ficheiros de servidor instalados.\n\n Instale os ficheiros através do menu Definições.</system:String>
+    <system:String x:Key="item52">Parece que você não tem os arquivos do servidor instalados.\n\nDeseja instalá-los agora e continuar? Nesse caso, escolha a versão mais recente ou estável.</system:String>
     <system:String x:Key="item53">Erro ao iniciar o servidor:</system:String>
     <system:String x:Key="item54">A descarregar...</system:String>
     <system:String x:Key="item55">Utilizar o branch da app: {0}</system:String>
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1.exe está a ser usado.\n\nFeche todas as instâncias abertas de H1Z1.\n\nVocê pode usar o botão abaixo para matar todos os processos de H1Z1.</system:String>
     <system:String x:Key="item122">Versão atual do jogo:</system:String>
     <system:String x:Key="item124">Launcher version</system:String>
-    <system:String x:Key="item125">Copyright © 2024 | H1Emu Project</system:String>
+    <system:String x:Key="item125">H1Emu © 2024</system:String>
     <system:String x:Key="item126">Desenvolvedor Principal</system:String>
     <system:String x:Key="item127">Desenvolvedores</system:String>
     <system:String x:Key="item128">Administradores</system:String>
