--- a/H1EmuLauncher/Language/StringResources.zh-cn.xaml
+++ b/H1EmuLauncher/Language/StringResources.zh-cn.xaml
@@ -46,7 +46,7 @@
     <system:String x:Key="item49">某些信息可能会丢失。</system:String>
     <system:String x:Key="item50">登录Steam账号后请正确输入你的Steam令牌。</system:String>
     <system:String x:Key="item51">请选择您要将游戏下载到的文件夹。</system:String>
-    <system:String x:Key="item52">你没有安装单机服务器。\n\n请到左下角游戏配置菜单中安装单机服务器。</system:String>
+    <system:String x:Key="item52">您似乎没有安装服务器文件。\n\n您想立即安装它们并继续吗？如果是这样，请选择最新版本或稳定版本。</system:String>
     <system:String x:Key="item53">单机服务器启动错误：</system:String>
     <system:String x:Key="item54">正在下载...</system:String>
     <system:String x:Key="item55">使用游戏分支：{0}</system:String>
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1游戏已经启动。\n\n请关闭所有打开的 H1Z1 实例。\n\n您可以使用下面的按钮来杀死 H1Z1 的所有进程。</system:String>
     <system:String x:Key="item122">当前游戏版本：</system:String>
     <system:String x:Key="item124">启动器版本</system:String>
-    <system:String x:Key="item125">Copyright © 2024 | H1Emu Project</system:String>
+    <system:String x:Key="item125">H1Emu © 2024</system:String>
     <system:String x:Key="item126">领导开发</system:String>
     <system:String x:Key="item127">开发商</system:String>
     <system:String x:Key="item128">管理员</system:String>
